[input-mask] fixed addon placed before input value may be overlayed by input value, fixed previously broken in previous version backward compatibility of piping api
<!--- Commit was signed off by phytonmk@gmail.com with GPG key ID CF2DC815AE956C1F -->

--- a/semcore/input-mask/src/style/input-mask.shadow.css
+++ b/semcore/input-mask/src/style/input-mask.shadow.css
@@ -13,6 +13,10 @@ SMask {
   letter-spacing: 0.1em;
   text-overflow: inherit;
 }
+SMask[neighborLocation='left'] {
+  left: 0;
+}
+
 SMaskHidden {
   opacity: 0;
 }
